fix: comment admin pannel actions
